[gd_scene load_steps=14 format=2]

[ext_resource path="res://Red.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Charminder.png" type="Texture" id=3]
[ext_resource path="res://World.gd" type="Script" id=4]
[ext_resource path="res://pixil-frame-0 (11).png" type="Texture" id=5]
[ext_resource path="res://PocketMonster.gd" type="Script" id=6]
[ext_resource path="res://FinalFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Enemy.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.6667
height = 10.6667

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 65.5, 14 )

[sub_resource type="Theme" id=5]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 9.15788, 11.1228, 0.526315, 0.0404858, -0.526315, -0.0404858, 5.47367, 9.2807, 0, 0, 0, 0, 3.10525, 10.8596, 0, 0, 0, 0, 4.15788, 12.4386, 0, 0, 0, 0, 5.99998, 13.2281, 0, 0, 0, 0, 8.63156, 12.9649, 0, 0, 0, 0, 8.89472, 10.8596, 0, 0, 0, 0, 9.15788, 11.1228 )
}

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="Roam" type="YSort" parent="."]

[node name="Player" type="KinematicBody2D" parent="Roam"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Roam/Player"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Roam/Player"]
position = Vector2( 1, 16 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Charminder" type="Sprite" parent="Roam"]
position = Vector2( 88, 28 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Area2D" type="StaticBody2D" parent="Roam/Charminder"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Roam/Charminder/Area2D"]
position = Vector2( -1.33333, 0.666664 )
shape = SubResource( 2 )

[node name="Battle" type="YSort" parent="."]

[node name="BattleSelections" type="Sprite" parent="Battle"]
position = Vector2( 0, 213 )
texture = ExtResource( 5 )
centered = false

[node name="Area2D" type="Area2D" parent="Battle/BattleSelections"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Battle/BattleSelections/Area2D"]
position = Vector2( 92.5, 22 )
z_index = 5
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Battle/BattleSelections/Area2D"]
position = Vector2( 230, 22 )
z_index = 5
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Battle/BattleSelections/Area2D"]
position = Vector2( 92, 54 )
z_index = 5
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Battle/BattleSelections/Area2D"]
position = Vector2( 230.5, 54 )
z_index = 5
shape = SubResource( 3 )

[node name="Move1" type="RichTextLabel" parent="Battle/BattleSelections"]
margin_left = 28.0
margin_top = 8.0
margin_right = 158.0
margin_bottom = 36.0
rect_clip_content = false
hint_tooltip = "TEST"
theme = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 7 )
text = "TEST"

[node name="Move2" type="RichTextLabel" parent="Battle/BattleSelections"]
margin_left = 167.0
margin_top = 8.0
margin_right = 294.0
margin_bottom = 36.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 7 )
text = "TEST"

[node name="Move3" type="RichTextLabel" parent="Battle/BattleSelections"]
margin_left = 27.0
margin_top = 41.0
margin_right = 157.0
margin_bottom = 69.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 7 )
text = "TEST"

[node name="Move4" type="RichTextLabel" parent="Battle/BattleSelections"]
margin_left = 168.0
margin_top = 40.0
margin_right = 298.0
margin_bottom = 68.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 7 )
text = "TEST"

[node name="Path2D" type="Path2D" parent="Battle"]
position = Vector2( 268.2, 46.7333 )
scale = Vector2( 3.8, 3.8 )
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="Battle/Path2D"]
position = Vector2( 9.15788, 11.1228 )
rotation = -2.2773
rotate = false

[node name="Enemy" type="Sprite" parent="Battle/Path2D/PathFollow2D"]
position = Vector2( 12.6301, -7.87802 )
rotation = 2.28638
scale = Vector2( 1, 1.00137 )
texture = ExtResource( 3 )
script = ExtResource( 8 )

[node name="MonsterController" type="Node" parent="Battle/Path2D/PathFollow2D/Enemy"]
script = ExtResource( 6 )

[node name="Path2D2" type="Path2D" parent="Battle"]
position = Vector2( 268.2, 46.7333 )
scale = Vector2( 3.8, 3.8 )
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="Battle/Path2D2"]
position = Vector2( 9.15788, 11.1228 )
rotation = -2.2773
rotate = false

[node name="Player" type="Sprite" parent="Battle/Path2D2/PathFollow2D"]
position = Vector2( 12.6301, -7.87802 )
rotation = 2.28638
scale = Vector2( 1, 1.00137 )
texture = ExtResource( 3 )
script = ExtResource( 8 )

[node name="MonsterController" type="Node" parent="Battle/Path2D2/PathFollow2D/Player"]
script = ExtResource( 6 )

[connection signal="StartBattle" from="Roam/Player" to="." method="_on_Player_StartBattle"]
[connection signal="input_event" from="Battle/BattleSelections/Area2D" to="." method="_on_Area2D_input_event"]
